--- a/src/index.html
+++ b/src/index.html
@@ -30,10 +30,10 @@
   <base href="/">
   <title>García & López</title>
 
-  <!-- UIkit CSS -->
+  <!-- UIkit CSS 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.8/css/uikit.min.css" />
 
-  <!-- UIkit JS -->
+  <!-- UIkit JS 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.8/js/uikit.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.8/js/uikit-icons.min.js"></script>
 
